Hide sensitive statuses, press s to reveal

--- a/tooi/app.css
+++ b/tooi/app.css
@@ -5,3 +5,6 @@ ListView > ListItem {
 ListView:focus > ListItem.--highlight {
     background: $primary;
 }
+
+.show { display: block; }
+.hide { display: none; }
