Further work on compose screen

--- a/tooi/app.css
+++ b/tooi/app.css
@@ -1,3 +1,7 @@
+ListView {
+    height: auto;
+}
+
 ListView > ListItem {
     background: transparent;
 }
@@ -8,8 +12,3 @@ ListView:focus > ListItem.--highlight {
 
 .show { display: block; }
 .hide { display: none; }
-/*
-TextArea {
-    background: blue;
-}
-*/
